icons not working yet

--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -47,3 +47,11 @@ a {
     border-radius: 10px;
     background-color: #796ab6;
 }
+
+svg.icon {
+    display: inline;
+    height: 1.5em;
+    width: 1.5em;
+    vertical-align: top;
+    fill: currentColor;
+  }
