--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -1,9 +1,20 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+  }
+  body {
+    line-height: 1.5;
+  }
+  img {
+    max-width: 100%;
+  }
+
 body {
     background-color: #000000; /* Dark black for the whole page */
     color: #FDFDFD; /* Pearl white for the default text color */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     height: 100vh;
     font-family: 'Workbench', serif;
@@ -13,6 +24,8 @@ h1 {
     background-color: #2a2a72; /* Deep blue for the header background */
     color: #f5f5f5; /* Dark black for the header text color */
     font-family: 'Handjet', sans-serif;
+    display: flex;
+    flex-direction: row;
 }
 
 a {
@@ -48,6 +61,15 @@ a {
     background-color: #796ab6;
 }
 
+.info-table {
+    border-collapse: collapse;
+}
+
+.label {
+    text-align: right; /* Align the labels to the right */
+    padding-right: 10px; /* Add some space between the labels and values */
+}
+
 svg.icon {
     display: inline;
     height: 1.5em;
@@ -55,4 +77,5 @@ svg.icon {
     vertical-align: top;
     fill: currentColor;
   }
+
 
