--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -1,14 +1,3 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
-  }
-  body {
-    line-height: 1.5;
-  }
-  img {
-    max-width: 100%;
-  }
-
 body {
     background-color: #000000; /* Dark black for the whole page */
     color: #FDFDFD; /* Pearl white for the default text color */
@@ -45,6 +34,9 @@ a {
     align-items: center;
     max-width: 50%;
     padding: 10px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .metric .score-box h1 {
