--- a/packages/proto/public/styles/page.css
+++ b/packages/proto/public/styles/page.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #000000; /* Dark black for the whole page */
-    color: #FDFDFD; /* Pearl white for the default text color */
+    background-color: var(--background-color-page);
+    color: var(--text-color-default);
     display: flex;
     flex-direction: column;
     justify-content: top;
@@ -10,22 +10,22 @@ body {
 }
 
 h1 {
-    background-color: #2a2a72; /* Deep blue for the header background */
-    color: #f5f5f5; /* Dark black for the header text color */
+    background-color: var(--background-color-header);
+    color: var(--text-color-header);
     font-family: 'Handjet', sans-serif;
     display: flex;
     flex-direction: row;
 }
 
 a {
-    color: #8d9fd4ef; /* Deep purple for links */
+    color: var(--link-color);
     font-family: 'Workbench', serif;
 }
 
 .metric {
-    background-color: #796ab6; /* Slightly lighter grey for metric box */
-    color: #FDFDFD; /* Pearl white for the text color in the metric box */
-    border: 1px solid #00008b98; /* Deep blue border around the metric box */
+    background-color: var(--background-color-metric);
+    color: var(--text-color-default); /* Reuse the default text color */
+    border: 1px solid var(--border-color-metric);
     text-align: center;
     border-radius: 10px;
     display: flex;
@@ -48,9 +48,9 @@ a {
     text-align: center;
     background-color: transparent;
     padding: 10px;
-    border: 5px solid #000000;
     border-radius: 10px;
-    background-color: #796ab6;
+    border: 5px solid var(--border-color-score-box);
+    background-color: var(--background-color-metric);
 }
 
 .info-table {
@@ -69,5 +69,3 @@ svg.icon {
     vertical-align: top;
     fill: currentColor;
   }
-
-
