--- a/packages/lit-frontend/app/styles/page.css
+++ b/packages/lit-frontend/app/styles/page.css
@@ -69,3 +69,45 @@ svg.icon {
     vertical-align: top;
     fill: currentColor;
   }
+
+/* Dropdown button styling -------------------------------------------*/
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+}
+.dropbutton {
+    background-color: --link-color;
+    color: --link-color;
+    padding: 8px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.dropdown-content {
+    position: absolute;
+    left: 50%; /* Start at the middle of .dropdown */
+    transform: translateX(-50%); /* Shift it back to center the content */
+    display: none; /* Keep it hidden until .dropdown is clicked */
+    background-color: var(--background-color-header); /* Corrected variable usage */
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-align: center;
+    border-radius: 10px;
+}
+.dropdown-content a {
+    color: --text-color-default;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: --background-color-header;}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbutton {background-color: --link-color;}
+
