--- a/packages/lit-frontend/app/styles/page.css
+++ b/packages/lit-frontend/app/styles/page.css
@@ -10,7 +10,6 @@ body {
 }
 
 h1 {
-    background-color: var(--background-color-header);
     color: var(--text-color-header);
     font-family: 'Handjet', sans-serif;
     display: flex;
@@ -111,3 +110,35 @@ svg.icon {
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown:hover .dropbutton {background-color: var(--border-color-score-box);}
 
+.dropbutton-settings {
+    position: absolute; /* Fixed position */
+    top: 40; /* Top right corner */
+    right: 0; /* Top right corner */
+    background-color: var(--background-color-metric); /* Example background color */
+    color: var(--text-color-header);
+    padding: 8px;
+    border: none;
+    cursor: pointer;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.dropdown-content-settings {
+    position: absolute; /* Adjusted to fixed */
+    top: 40px; /* Positioned below the button */
+    right: 0;
+    display: none;
+}
+
+.dropdown-content-settings a {
+    color: var(--text-color-default);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content-settings a:hover {background-color:var(--background-color-metric); border-radius: 10px;}
+.dropdown:hover .dropdown-content-settings {display: block;}
+.dropdown:hover .dropbutton-settings {background-color: var(--border-color-score-box);}
