toggle not working persistently for all pages and index dropdown is messed up

--- a/packages/lit-frontend/app/styles/page.css
+++ b/packages/lit-frontend/app/styles/page.css
@@ -71,7 +71,7 @@ svg.icon {
 
 /* Dropdown button styling -------------------------------------------*/
 .dropdown {
-    position: relative;
+    position: absolute;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
@@ -99,6 +99,7 @@ svg.icon {
     z-index: 1;
     text-align: center;
     border-radius: 10px;
+    top: 40px; /* Position it below the button */
 }
 .dropdown-content a {
     color: var(--text-color-default);
@@ -106,12 +107,18 @@ svg.icon {
     text-decoration: none;
     display: block;
 }
+
+.dropdown-content ul {
+    list-style-type: none; /* Removes bullet points */
+    padding: 0; /* Removes default padding */
+    margin: 0; /* Removes default margin */
+}
 .dropdown-content a:hover {background-color:var(--background-color-metric); border-radius: 10px;}
 .dropdown:hover .dropdown-content {display: block;}
 .dropdown:hover .dropbutton {background-color: var(--border-color-score-box);}
 
 .dropbutton-settings {
-    position: absolute; /* Fixed position */
+    position: absolute;
     top: 40; /* Top right corner */
     right: 0; /* Top right corner */
     background-color: var(--background-color-metric); /* Example background color */
