--- a/packages/lit-frontend/app/styles/tokens.css
+++ b/packages/lit-frontend/app/styles/tokens.css
@@ -15,3 +15,14 @@
 
     --time-transition-control: 300ms;
 }
+
+body.light-mode {
+    --background-color-page: #f5f5f5;
+    --text-color-default: #000000;
+    --background-color-header: #2a2a72;
+    --text-color-header: #000000;
+    --link-color: #8d9fd4ef;
+    --background-color-metric: #796ab6;
+    --border-color-metric: #00008b98;
+    --border-color-score-box: #000000;
+  }
