--- a/packages/lit-frontend/app/styles/page.css
+++ b/packages/lit-frontend/app/styles/page.css
@@ -23,7 +23,7 @@ a {
 
 .metric {
     background-color: var(--background-color-metric);
-    color: var(--text-color-default); /* Reuse the default text color */
+    color: var(--text-color-default); 
     border: 1px solid var(--border-color-metric);
     text-align: center;
     border-radius: 10px;
@@ -73,9 +73,7 @@ svg.icon {
 .dropdown {
     position: absolute;
     display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
+    width: 100%;
 }
 .dropbutton {
     background-color: var(--background-color-metric);
@@ -93,7 +91,7 @@ svg.icon {
     left: 50%; /* Start at the middle of .dropdown */
     transform: translateX(-50%); /* Shift it back to center the content */
     display: none; /* Keep it hidden until .dropdown is clicked */
-    background-color: var(--background-color-header); /* Corrected variable usage */
+    background-color: var(--background-color-header); 
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -121,7 +119,7 @@ svg.icon {
     position: absolute;
     top: 40; /* Top right corner */
     right: 0; /* Top right corner */
-    background-color: var(--background-color-metric); /* Example background color */
+    background-color: var(--background-color-metric); 
     color: var(--text-color-header);
     padding: 8px;
     border: none;
@@ -130,6 +128,8 @@ svg.icon {
     border-bottom-right-radius: 10px;
     border-top-left-radius: 10px;
     margin-bottom: 10px;
+    font-family: 'Workbench', serif;
+    text-decoration: none;
 }
 
 .dropdown-content-settings {
